fix: lower banner z-index

--- a/layout/src/styles.module.scss
+++ b/layout/src/styles.module.scss
@@ -10,10 +10,10 @@
   position: fixed;
   left: 0;
   right: 0;
-  z-index: 100;
+  z-index: 1;
 
   &.custom-parent {
-    z-index: auto;
+    z-index: initial;
     position: relative;
   }
 
